/*
 * $Id: ChangeLog,v 1.3928 2005/03/09 21:19:38 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2005-03-09 17:29 UTC-0800 Ron Pinkas <Ron@xHarbour.com>
  * utils/xbscript/xbscript.prg
    * Refined and more consistent PP_LocalParams() PP_Locals(), PP_Statics() PP_Params() PP_Privates() and PP_Publics()
    
2005-03-09 13:18 UTC-0800 Ron Pinkas <Ron@xHarbour.com>
  * include/hberrors.h
    + Added:
      #define HB_PP_ERR_EMPTY_OPTIONAL                27
      #define HB_PP_ERR_EMPTY_REPEATABLE              28
  * source/pp/ppcore.c
    + Added detection of empty optional clause and empty repeatable group,
      and generation of respective compile error.

2005-03-09 23:00 UTC+0200 Pavel Tsarenko <tpe2@mail.ru>
  * source/ct/blank.prg
    * small changes for clipper compatibility
  * source/ct/charop.c
  * source/ct/charswap.c
  * source/ct/justify.c
  * source/ct/replace.c
  * source/ct/token1.c
    ! fixed hb_xgrab() call with zero length

2005-03-09 08:10 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * makefile.nt
    * create an MT mode version of hbtest.exe (hbtestmt.exe)

2005-03-09 19:10 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/compiler/hbusage.c
    ! use hb_credits() for list of contributors.

2005-03-09 14:30 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * include/hbapi.h
    ! file that I missed to update for my recent changes

2005-03-09 12:30 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  + include/hbver.ch
    ! defines for xHarbour build info

  * include/hbver.h
    + include hbver.ch

  * source/rtl/errorsys.prg
    - move HB_BUILDDATE to source/version.c

  * source/common/hbver.c
    + char *hb_credits( void ), list of developers

  * source/rtl/version.c
    + HB_BUILDINFO(), PRG level function for xHarbour build info

  * source/vm/arrays.c
  * source/vm/cmdarg.c